--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "main",
   "version": "0.1.0",
-  "homepage": "https://VishnuBoys.github.io/main",
+  "homepage": "https://VishnuBoys.github.io/home",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -12,6 +12,7 @@
     "nice-react-ticker": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-lazy-load-image-component": "^1.5.6",
     "react-scripts": "^5.0.1",
     "tailwindcss-plugins": "^0.3.0",
