--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@react-pdf-viewer/core": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "nice-react-ticker": "^2.1.0",
+    "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-lazy-load-image-component": "^1.5.6",
     "react-scripts": "^5.0.1",
-    "tailwindcss-plugins": "^0.3.0",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,10 +48,9 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^4.0.0",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.21",
     "react-router-dom": "^6.4.4",
     "tailwindcss": "^3.2.4"
   }
