--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "daisyui": "^2.47.0",
     "nice-react-ticker": "^2.1.0",
     "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
