--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "homepage": "https://Vishnuboys.github.io/home/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@mui/material": "^5.11.6",
     "@react-pdf-viewer/core": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "daisyui": "^2.47.0",
     "nice-react-ticker": "^2.1.0",
     "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
