--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "material-react-table": "^1.7.4",
     "nice-react-ticker": "^2.1.0",
     "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
