--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tremor/react": "^1.8.1",
     "material-react-table": "^1.7.4",
     "nice-react-ticker": "^2.1.0",
     "pdfjs-dist": "^3.1.81",
@@ -21,6 +22,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-lazy-load-image-component": "^1.5.6",
     "react-scripts": "^5.0.1",
+    "react-social-media-embed": "^2.3.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
